--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/qiaoshouzi/nsfwjs-api#readme",
     "dependencies": {
         "@tensorflow/tfjs-node": "^3.15.0",
+        "express": "^4.17.3",
         "nsfwjs": "^2.4.1"
     }
 }
